# Core23

./: .gdbinit  CMakeLists.txt  Core23.cd  Core23.natvis  LICENSE  Main.cpp  README.md  library.h  myHardLink
.cmake/Core23/Debug-VS2019/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
Docs/: Core23.adoc  Core23.html
Lib/core/: ArgumentException.cpp  ArgumentException.h  ArithmeticException.cpp  ArithmeticException.h  AssertionError.cpp  AssertionError.h  AutoClosable.h  Boolean.cpp  Boolean.h  Byte.cpp  Byte.h  CastException.cpp  CastException.h  CharSequence.cpp  CharSequence.h  Character.cpp  Character.h  Class.h  ClassCastException.cpp  ClassCastException.h  CloneNotSupportedException.cpp  CloneNotSupportedException.h  Comparable.cpp  Comparable.h  Complex.cpp  Complex.h  Double.cpp  Double.h  Enum.cpp  Enum.h  Error.cpp  Error.h  Exception.cpp  Exception.h  Float.cpp  Float.h  IllegalArgumentException.cpp  IllegalArgumentException.h  IllegalStateException.cpp  IllegalStateException.h  (+55 more)
Lib/core/charset/: CharacterCodingException.cpp  CharacterCodingException.h  Charset.cpp  Charset.h  CharsetDecoder.cpp  CharsetDecoder.h  CharsetEncoder.cpp  CharsetEncoder.h  CoderMalfunctionError.cpp  CoderMalfunctionError.h  CoderResult.cpp  CoderResult.h  IllegalCharsetNameException.cpp  IllegalCharsetNameException.h  MalformedInputException.cpp  MalformedInputException.h  UnmappableCharacterException.cpp  UnmappableCharacterException.h  UnsupportedCharsetException.cpp  UnsupportedCharsetException.h
Lib/core/concurrent/: AtomicBoolean.cpp  AtomicBoolean.h  AtomicInteger.cpp  AtomicInteger.h  AtomicIntegerArray.cpp  AtomicIntegerArray.h  AtomicLong.cpp  AtomicLong.h  AtomicLongArray.cpp  AtomicLongArray.h  AtomicReference.h  AtomicReferenceArray.h  CancellationException.cpp  CancellationException.h  Condition.cpp  Condition.h  ExecutionException.cpp  ExecutionException.h  Future.h  Lock.h  ReadWriteLocker.cpp  ReadWriteLocker.h  ReentrantLock.cpp  ReentrantLock.h  Semaphore.cpp  Semaphore.h  SimpleLock.cpp  SimpleLock.h
Lib/core/foreign/: CIterator.h  TzInfos.cpp  UnicodeTable.cpp  UnicodeTable.h  UnicodeTableD.cpp  UnicodeTableN.cpp  UnicodeTableP.cpp
Lib/core/function/: BiConsumer.h  BiFunction.h  BiPredicate.h  BinaryOperator.h  BooleanSupplier.h  Consumer.h  DoubleBinaryOperator.h  DoubleFunction.h  DoublePredicate.h  DoubleSupplier.h  DoubleUnaryOperator.h  Function.h  Functional.cpp  Functional.h  IntBinaryOperator.h  IntConsumer.h  IntFunction.h  IntPredicate.h  IntSupplier.h  IntUnaryOperator.h  LongBinaryOperator.h  LongConsumer.h  LongFunction.h  LongPredicate.h  LongSupplier.h  LongUnaryOperator.h  Predicate.h  Supplier.h  UnaryOperator.h
Lib/core/io/: Buffer.cpp  Buffer.h  BufferOverflowException.cpp  BufferOverflowException.h  BufferUnderflowException.cpp  BufferUnderflowException.h  BufferedReader.cpp  BufferedReader.h  BufferedWriter.cpp  BufferedWriter.h  ByteBuffer.cpp  ByteBuffer.h  CharBuffer.cpp  CharBuffer.h  Closeable.cpp  Closeable.h  DoubleBuffer.cpp  DoubleBuffer.h  File.cpp  File.h  FileArray.cpp  FileArray.h  FileDescriptor.cpp  FileDescriptor.h  FileSystem.cpp  FileSystem.h  FloatBuffer.cpp  FloatBuffer.h  IOError.cpp  IOError.h  IOException.cpp  IOException.h  InputStream.cpp  InputStream.h  InputStreamReader.cpp  InputStreamReader.h  IntBuffer.cpp  IntBuffer.h  InvalidMarkException.cpp  InvalidMarkException.h  (+16 more)
Lib/core/math/: BigDecimal.cpp  BigDecimal.h  BigInteger.cpp  BigInteger.h
Lib/core/native/: Array.cpp  Array.h  ArrayStoreException.cpp  ArrayStoreException.h  BooleanArray.cpp  BooleanArray.h  BooleanArray2D.cpp  BooleanArray2D.h  ByteArray.cpp  ByteArray.h  ByteArray2D.cpp  ByteArray2D.h  CharArray.cpp  CharArray.h  CharArray2D.cpp  CharArray2D.h  DoubleArray.cpp  DoubleArray.h  DoubleArray2D.cpp  DoubleArray2D.h  FloatArray.cpp  FloatArray.h  FloatArray2D.cpp  FloatArray2D.h  IntArray.cpp  IntArray.h  IntArray2D.cpp  IntArray2D.h  LongArray.cpp  LongArray.h  LongArray2D.cpp  LongArray2D.h  ObjectArray.cpp  ObjectArray.h  PrimitiveArray.h  PrimitiveArray2D.h  ReferenceArray.cpp  ReferenceArray.h  ShortArray.cpp  ShortArray.h  (+6 more)
Lib/core/net/: IPAddress.cpp  IPAddress.h  IPv4Address.cpp  IPv4Address.h  IPv6Address.cpp  IPv6Address.h  ServerSocket.cpp  ServerSocket.h  Socket.cpp  Socket.h  SocketException.cpp  SocketException.h  SyntaxException.cpp  SyntaxException.h  URI.cpp  URI.h  URISyntaxException.cpp  URISyntaxException.h  URL.cpp  URL.h
Lib/core/primitive/: Array.cpp  Array.h  BoolArray.cpp  BoolArray.h  BooleanArray.cpp  BooleanArray.h  ByteArray.cpp  ByteArray.h  CharArray.cpp  CharArray.h  DoubleArray.cpp  DoubleArray.h  FloatArray.cpp  FloatArray.h  IntArray.cpp  IntArray.h  LongArray.cpp  LongArray.h  ObjectArray.cpp  ObjectArray.h  ReferenceArray.cpp  ReferenceArray.h  ShortArray.cpp  ShortArray.h
Lib/core/private/: ArraysSupport.cpp  ArraysSupport.h  Compiler.h  Generics.h  Literals.h  Null.cpp  Null.h  OperatingSystem.h  Preconditions.cpp  Preconditions.h  Processor.h  Templates.h  Unsafe.cpp  Unsafe.h
Lib/core/random/: Generator.cpp  Generator.h  Random.cpp  Random.h  RandomGenerator.cpp  RandomGenerator.h
Lib/core/regex/: Pattern.h
Lib/core/stream/: BaseStream.h  DoubleStream.h  IntStream.h  LongStream.h  Stream.h
Lib/core/text/: BasicDateFormatter.cpp  BasicDateFormatter.h  Collator.cpp  Collator.h  DateFormatter.cpp  DateFormatter.h  DecimalFormatter.cpp  DecimalFormatter.h  Formatter.cpp  Formatter.h  MessageFormatter.cpp  MessageFormatter.h  Normalizer.cpp  Normalizer.h  NumberFormatter.cpp  (+3 more)
Meta/CLDR/: cldr.py
Test/: CMakeLists.txt  Main.cpp
UnixLib/: CMakeLists.txt
UnixLib/time/: LocalDateTime.cpp  ZoneID.cpp
WinLib/: CMakeLists.txt
WinLib/core/concurrent/: SimpleLock.cpp
WinLib/core/io/: NTFS.cpp  NTFS.h
WinLib/core/io/charset/: Charset.cpp
WinLib/core/native/: WindowsException.cpp  WindowsException.h
WinLib/core/private/: Unsafe.cpp
WinLib/core/time/: Chrono.cpp  LocalDateTime.cpp  ZoneID.cpp
WinLib/core/util/: Locale.cpp
(+350 files in other folders)
