
# This file is called on windows system only
ADD_LIBRARY(Core23 SHARED
        ../Lib/core/private/OperatingSystem.h
        ../Lib/core/private/Processor.h
        ../Lib/core/private/Compiler.h
        ../Lib/core/private/Generics.h
        ../Lib/core/private/Templates.h
        ../Lib/core/private/Literals.h
        ../Lib/core/Class.h
        ../Lib/core/Object.cpp
        ../Lib/core/Object.h
        ../Lib/core/String.cpp
        ../Lib/core/String.h
        ../Lib/core/private/Null.cpp
        ../Lib/core/private/Null.h
        ../Lib/core/Comparable.cpp
        ../Lib/core/Comparable.h
        ../Lib/core/Throwable.cpp
        ../Lib/core/Throwable.h
        ../Lib/core/Trace.cpp
        ../Lib/core/Trace.h
        ../Lib/core/Exception.cpp
        ../Lib/core/Exception.h
        ../Lib/core/Error.cpp
        ../Lib/core/Error.h
        ../Lib/core/RuntimeException.cpp
        ../Lib/core/RuntimeException.h
        ../Lib/core/ArgumentException.cpp
        ../Lib/core/ArgumentException.h
        ../Lib/core/CastException.cpp
        ../Lib/core/CastException.h
        ../Lib/core/CloneNotSupportedException.cpp
        ../Lib/core/CloneNotSupportedException.h
        ../Lib/core/UnsupportedMethodException.cpp
        ../Lib/core/UnsupportedMethodException.h
        ../Lib/core/IndexException.cpp
        ../Lib/core/IndexException.h
        ../Lib/core/KeyNotFoundException.cpp
        ../Lib/core/KeyNotFoundException.h
        ../Lib/core/SecurityException.cpp
        ../Lib/core/SecurityException.h
        ../Lib/core/MemoryError.cpp
        ../Lib/core/MemoryError.h
        ../Lib/core/AssertionError.cpp
        ../Lib/core/AssertionError.h
        ../Lib/core/Boolean.cpp
        ../Lib/core/Boolean.h
        ../Lib/core/Byte.cpp
        ../Lib/core/Byte.h
        ../Lib/core/Short.cpp
        ../Lib/core/Short.h
        ../Lib/core/Character.cpp
        ../Lib/core/Character.h
        ../Lib/core/Integer.cpp
        ../Lib/core/Integer.h
        ../Lib/core/Long.cpp
        ../Lib/core/Long.h
        ../Lib/core/Float.cpp
        ../Lib/core/Float.h
        ../Lib/core/Double.cpp
        ../Lib/core/Double.h
        ../Lib/core/Complex.cpp
        ../Lib/core/Complex.h
        ../Lib/core/NumberFormatException.cpp
        ../Lib/core/NumberFormatException.h
        ../Lib/core/InternalError.cpp
        ../Lib/core/InternalError.h
        ../Lib/core/Math.cpp
        ../Lib/core/Math.h
        ../Lib/core/NoSuchItemException.cpp
        ../Lib/core/NoSuchItemException.h
        ../Lib/core/StateException.cpp
        ../Lib/core/StateException.h
        ../Lib/core/StringBuffer.cpp
        ../Lib/core/StringBuffer.h
        ../Lib/core/ArithmeticException.cpp
        ../Lib/core/ArithmeticException.h
        ../Lib/core/Enum.cpp
        ../Lib/core/Enum.h
        ../Lib/core/MatchException.cpp
        ../Lib/core/MatchException.h
        ../Lib/core/UnknownError.cpp
        ../Lib/core/UnknownError.h
        ../Lib/core/Void.cpp
        ../Lib/core/Void.h
        ../Lib/core/private/Unsafe.cpp
        ../Lib/core/private/Unsafe.h
        ../Lib/core/SystemError.cpp
        ../Lib/core/SystemError.h
        ../Lib/core/util/Collection.cpp
        ../Lib/core/util/Collection.h
        ../Lib/core/util/Iterator.cpp
        ../Lib/core/util/Iterator.h
        ../Lib/core/primitive/Array.cpp
        ../Lib/core/primitive/Array.h
        ../Lib/core/primitive/ByteArray.cpp
        ../Lib/core/primitive/ByteArray.h
        ../Lib/core/primitive/CharArray.cpp
        ../Lib/core/primitive/CharArray.h
        ../Lib/core/primitive/ShortArray.cpp
        ../Lib/core/primitive/ShortArray.h
        ../Lib/core/primitive/IntArray.cpp
        ../Lib/core/primitive/IntArray.h
        ../Lib/core/primitive/LongArray.cpp
        ../Lib/core/primitive/LongArray.h
        ../Lib/core/primitive/ObjectArray.cpp
        ../Lib/core/primitive/ObjectArray.h
        ../Lib/core/util/function/Consumer.cpp
        ../Lib/core/util/function/Consumer.h
        ../Lib/core/util/function/Functional.cpp
        ../Lib/core/util/function/Functional.h
        ../Lib/core/util/function/Predicate.cpp
        ../Lib/core/util/function/Predicate.h
        ../Lib/core/util/function/Suplier.cpp
        ../Lib/core/util/function/Suplier.h
        ../Lib/core/util/function/BiConsumer.cpp
        ../Lib/core/util/function/BiConsumer.h
        ../Lib/core/util/function/BiPredicate.cpp
        ../Lib/core/util/function/BiPredicate.h
        ../Lib/core/util/concurrent/AtomicInteger.cpp
        ../Lib/core/util/concurrent/AtomicInteger.h
        ../Lib/core/util/concurrent/AtomicLong.cpp
        ../Lib/core/util/concurrent/AtomicLong.h
        ../Lib/core/util/concurrent/AtomicIntegerArray.cpp
        ../Lib/core/util/concurrent/AtomicIntegerArray.h
        ../Lib/core/util/concurrent/AtomicLongArray.cpp
        ../Lib/core/util/concurrent/AtomicLongArray.h
        ../Lib/core/util/concurrent/AtomicReference.cpp
        ../Lib/core/util/concurrent/AtomicReference.h
        ../Lib/core/util/concurrent/AtomicReferenceArray.cpp
        ../Lib/core/util/concurrent/AtomicReferenceArray.h
        ../Lib/core/util/concurrent/Locker.cpp
        ../Lib/core/util/concurrent/Locker.h
        ../Lib/core/util/concurrent/ReentrantLocker.cpp
        ../Lib/core/util/concurrent/ReentrantLocker.h
        ../Lib/core/util/concurrent/ReadWriteLocker.cpp
        ../Lib/core/util/concurrent/ReadWriteLocker.h
        ../Lib/core/util/concurrent/Condition.cpp
        ../Lib/core/util/concurrent/Condition.h
        ../Lib/core/io/File.cpp
        ../Lib/core/io/File.h
        ../Lib/core/io/FileSystem.cpp
        ../Lib/core/io/FileSystem.h
        ../Lib/core/io/IOError.cpp
        ../Lib/core/io/IOError.h
        ../Lib/core/io/IOException.cpp
        ../Lib/core/io/IOException.h
        ../Lib/core/io/Reader.cpp
        ../Lib/core/io/Reader.h
        ../Lib/core/io/Writer.cpp
        ../Lib/core/io/Writer.h
        ../Lib/core/io/PipedReader.cpp
        ../Lib/core/io/PipedReader.h
        ../Lib/core/io/PipedWriter.cpp
        ../Lib/core/io/PipedWriter.h
        ../Lib/core/io/BufferedReader.cpp
        ../Lib/core/io/BufferedReader.h
        ../Lib/core/io/BufferedWriter.cpp
        ../Lib/core/io/BufferedWriter.h
        ../Lib/core/io/PrintStreamWriter.cpp
        ../Lib/core/io/PrintStreamWriter.h
        ../Lib/core/io/PrintStream.cpp
        ../Lib/core/io/PrintStream.h
        ../Lib/core/io/InputStream.cpp
        ../Lib/core/io/InputStream.h
        ../Lib/core/io/InputStreamReader.cpp
        ../Lib/core/io/InputStreamReader.h
        ../Lib/core/util/List.cpp
        ../Lib/core/util/List.h
        ../Lib/core/util/ArrayList.cpp
        ../Lib/core/util/ArrayList.h
        ../Lib/core/util/LinkedList.cpp
        ../Lib/core/util/LinkedList.h
        ../Lib/core/util/Set.cpp
        ../Lib/core/util/Set.h
        ../Lib/core/util/TreeSet.cpp
        ../Lib/core/util/TreeSet.h
        ../Lib/core/util/HashSet.cpp
        ../Lib/core/util/HashSet.h
        ../Lib/core/util/Map.cpp
        ../Lib/core/util/Map.h
        ../Lib/core/util/TreeMap.cpp
        ../Lib/core/util/TreeMap.h
        ../Lib/core/util/HashMap.cpp
        ../Lib/core/util/HashMap.h
        ../Lib/core/util/Queue.cpp
        ../Lib/core/util/Queue.h
        ../Lib/core/util/HashTable.cpp
        ../Lib/core/util/HashTable.h
        ../Lib/core/util/Locale.cpp
        ../Lib/core/util/Locale.h
        ../Lib/core/util/Vector.cpp
        ../Lib/core/util/Vector.h
        ../Lib/core/util/random/Generator.cpp
        ../Lib/core/util/random/Generator.h
        ../Lib/core/util/random/Random.cpp
        ../Lib/core/util/random/Random.h
        ../Lib/core/util/PriorityQueue.cpp
        ../Lib/core/util/PriorityQueue.h
        ../Lib/core/util/regex/Pattern.cpp
        ../Lib/core/util/regex/Pattern.h
        ../Lib/core/time/Chrono.cpp
        ../Lib/core/time/Chrono.h
        ../Lib/core/time/Time.cpp
        ../Lib/core/time/Time.h
        ../Lib/core/time/Date.cpp
        ../Lib/core/time/Date.h
        ../Lib/core/time/DateTime.cpp
        ../Lib/core/time/DateTime.h
        ../Lib/core/time/DeadLine.cpp
        ../Lib/core/time/DeadLine.h
        ../Lib/core/time/TimeZone.cpp
        ../Lib/core/time/TimeZone.h
        ../Lib/core/time/Formatter.cpp
        ../Lib/core/time/Formatter.h
        ../Lib/core/time/Calendar.cpp
        ../Lib/core/time/Calendar.h
        ../Lib/core/text/Collator.cpp
        ../Lib/core/text/Collator.h
        ../Lib/core/text/Formatter.cpp
        ../Lib/core/text/Formatter.h
        ../Lib/core/text/DateFormatter.cpp
        ../Lib/core/text/DateFormatter.h
        ../Lib/core/text/NumberFormatter.cpp
        ../Lib/core/text/NumberFormatter.h
        ../Lib/core/text/DecimalFormatter.cpp
        ../Lib/core/text/DecimalFormatter.h
        ../Lib/core/text/MessageFormatter.cpp
        ../Lib/core/text/MessageFormatter.h
        ../Lib/core/text/BasicDateFormatter.cpp
        ../Lib/core/text/BasicDateFormatter.h
        ../Lib/core/text/ParseException.cpp
        ../Lib/core/text/ParseException.h
        ../Lib/core/text/Normalizer.cpp
        ../Lib/core/text/Normalizer.h
        ../Lib/core/net/IPAddress.cpp
        ../Lib/core/net/IPAddress.h
        ../Lib/core/net/IPv4Address.cpp
        ../Lib/core/net/IPv4Address.h
        ../Lib/core/net/IPv6Address.cpp
        ../Lib/core/net/IPv6Address.h
        ../Lib/core/net/Socket.cpp
        ../Lib/core/net/Socket.h
        ../Lib/core/net/ServerSocket.cpp
        ../Lib/core/net/ServerSocket.h
        ../Lib/core/net/SocketException.cpp
        ../Lib/core/net/SocketException.h
        ../Lib/core/net/URI.cpp
        ../Lib/core/net/URI.h
        ../Lib/core/net/URL.cpp
        ../Lib/core/net/URL.h
        ../Lib/core/net/SyntaxException.cpp
        ../Lib/core/net/SyntaxException.h
        ../Lib/core/math/BigInteger.cpp
        ../Lib/core/math/BigInteger.h
        ../Lib/core/math/BigDecimal.cpp
        ../Lib/core/math/BigDecimal.h
        ../Lib/core/io/charset/Charset.cpp
        ../Lib/core/io/charset/Charset.h
        ../Lib/core/io/charset/Decoder.cpp
        ../Lib/core/io/charset/Decoder.h
        ../Lib/core/io/charset/Encoder.cpp
        ../Lib/core/io/charset/Encoder.h
        ../Lib/core/io/charset/CodingException.cpp
        ../Lib/core/io/charset/CodingException.h
        ../Lib/core/io/native/ByteBuffer.cpp
        ../Lib/core/io/native/ByteBuffer.h
        ../Lib/core/io/native/CharBuffer.cpp
        ../Lib/core/io/native/CharBuffer.h
        ../Lib/core/io/native/IntBuffer.cpp
        ../Lib/core/io/native/IntBuffer.h
        ../Lib/core/io/native/ShortBuffer.cpp
        ../Lib/core/io/native/ShortBuffer.h
        ../Lib/core/io/native/LongBuffer.cpp
        ../Lib/core/io/native/LongBuffer.h
        ../Lib/core/io/native/FloatBuffer.cpp
        ../Lib/core/io/native/FloatBuffer.h
        ../Lib/core/io/native/DoubleBuffer.cpp
        ../Lib/core/io/native/DoubleBuffer.h
        ../Lib/core/util/concurrent/AtomicBoolean.cpp
        ../Lib/core/util/concurrent/AtomicBoolean.h
        core/private/Unsafe.cpp
        ../Lib/core/primitive/BoolArray.cpp
        ../Lib/core/primitive/BoolArray.h
        ../Lib/core/primitive/FloatArray.cpp
        ../Lib/core/primitive/FloatArray.h
        ../Lib/core/primitive/DoubleArray.cpp
        ../Lib/core/primitive/DoubleArray.h
        core/native/WindowsException.cpp
        core/native/WindowsException.h
        ../Lib/core/foreign/UnicodeTable.cpp
        ../Lib/core/foreign/UnicodeTable.h
        ../Lib/core/foreign/UnicodeTableP.cpp
        ../Lib/core/foreign/UnicodeTableD.cpp
)
INCLUDE_DIRECTORIES("../Lib")
